finish build setup

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -6,8 +6,7 @@ set(SOURCES
 )
 
 add_library(core STATIC)
-
 target_sources(core PRIVATE ${SOURCES})
 
-
+target_include_directories(core INTERFACE "src") 
 
