--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(core STATIC)
 target_sources(core PRIVATE ${SOURCES})
 
 target_link_libraries(core glfw)
+target_link_libraries(core OpenGL::GL)
 
 target_include_directories(core INTERFACE "src") 
 
