--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -10,6 +10,7 @@ target_sources(core PRIVATE ${SOURCES})
 
 add_compile_definitions(
     GLFW_INCLUDE_NONE
+    GLEW_STATIC
 )
 
 target_link_libraries(core glfw)
