Include spdlog as source code static libary

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -17,15 +17,16 @@ add_library(core STATIC)
 target_sources(core PRIVATE ${SOURCES})
 
 add_compile_definitions(
-    GLFW_INCLUDE_NONE
-    GLEW_STATIC
-    $<$<CONFIG:Debug>:CHIN_DEBUG>
-    $<$<CONFIG:Release>:CHIN_RELEASE>
+        GLFW_INCLUDE_NONE
+        GLEW_STATIC
+        $<$<CONFIG:Debug>:CHIN_DEBUG>
+        $<$<CONFIG:Release>:CHIN_RELEASE>
 )
 
 target_link_libraries(core glfw)
 target_link_libraries(core glad)
-target_link_libraries(core $<$<CONFIG:Debug>: spdlog::spdlog>)
+# Note that excluding spdlog from Release doesn't work as of 22.01.2026, https://gitlab.kitware.com/cmake/cmake/-/issues/24629
+target_link_libraries(core $<$<CONFIG:DEBUG>:spdlog::spdlog>)
 
 target_include_directories(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}) 
 
