Rudementeray logging abstraction

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 set(SOURCES
         Chinstrap.h
+        src/Logging.h
         src/Application.cpp
         src/Application.h
         src/Window.cpp
@@ -28,5 +29,7 @@ target_link_libraries(core glad)
 # Note that excluding spdlog from Release doesn't work as of 22.01.2026, https://gitlab.kitware.com/cmake/cmake/-/issues/24629
 target_link_libraries(core $<$<CONFIG:DEBUG>:spdlog::spdlog>)
 
-target_include_directories(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}) 
+target_include_directories(core PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}
+)
 
