--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 set(CMAKE_C_COMPILER   "clang"   CACHE STRING "C compiler"   FORCE)
 set(CMAKE_CXX_COMPILER "clang++" CACHE STRING "C++ compiler" FORCE)
+set(CXX_STANDARD C++17)
 set(CMAKE_CONFIGURATION_TYPES Debug;Release)
 
 project(Chinstrap3D)
