--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 set(CMAKE_C_COMPILER   "clang"   CACHE STRING "C compiler"   FORCE)
 set(CMAKE_CXX_COMPILER "clang++" CACHE STRING "C++ compiler" FORCE)
-set(CXX_STANDARD C++17)
 set(CMAKE_CONFIGURATION_TYPES Debug;Release)
 
 project(Chinstrap3D)
@@ -13,3 +12,6 @@ include(Dependencies.cmake)
 
 add_subdirectory(chinstrap)
 add_subdirectory(app)
+
+set_property(TARGET app PROPERTY CXX_STANDARD 17)
+set_property(TARGET chinstrap PROPERTY CXX_STANDARD 17)
